--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -3,7 +3,7 @@ name: Pushing to GitHub Pages
 on:
   push:
     branches:
-      - main  # Runs when a push is made to the main branch
+      - main
 
 permissions:
   contents: read
@@ -12,22 +12,23 @@ permissions:
 
 jobs:
   deploy:
-    environment: github-pages
-    name: ${{ steps.deployment.outputs.page_url }}
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v4
 
-    - name: Setup Pages
-      uses: actions/configure-pages@v4
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
 
-    - name: Upload Artifact
-      uses: actions/upload-pages-artifact@v3
-      with:
-        path: '.'  # Uploads the entire repository
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: '.'
 
-    - name: Deploy to GitHub Pages
-      id: deployment
-      uses: actions/deploy-pages@v4
+      - name: Deploy to Pages
+        id: deployment
+        uses: actions/deploy
